Fixed map controls layout issue on Linux machines.

--- a/assets/css/mapControls.styl
+++ b/assets/css/mapControls.styl
@@ -105,7 +105,7 @@
         .control-label
             clear left
             display inline-block
-            width 110px
+            width 108px
 
     .undo
         color rgba(250, 100, 80, 1)
@@ -116,6 +116,10 @@
 
     span.grid-size
         margin-right 12px
+
+// The map name input field.
+#map-ctl-name
+    width 160px
 
 // THe "identify z-index" button.
 #map-ctl-zindex-identify
